tests/templatetest/foo/bar/Test.java
package foo.bar;

import edu.ucr.cs.riple.taint.ucrtainting.qual.*;

public class Test {

  //  public static <T> T unmarshall(Class<T> cls, Object obj) {
  //    return cls.cast(obj);
  //  }
  //
  //  public static void main(String[] args) {
  //    // :: error: assignment
  //    @RUntainted String element = unmarshall(String.class, "test");
  //  }
  //
  //  class Bar<T> {}
}
